--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -22,3 +22,28 @@ a {
 button {
   cursor: pointer;
 }
+
+// # utils
+
+.offset-bg {
+  &:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+
+    border-radius: 10px;
+
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    z-index: -1;
+    transition: 0.2s;
+  }
+
+  &:hover {
+    &:after {
+      top: 0px;
+      left: 0px;
+    }
+  }
+}
