--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -23,10 +23,15 @@ button {
   cursor: pointer;
 }
 
+// list reset
+ul {
+  list-style-type: none;
+}
+
 // # utils
 
 .offset-bg {
-  outline: 1px solid black;
+  outline: 1px solid $blue-800;
   border: 0;
   border-radius: 10px;
 
@@ -48,11 +53,33 @@ button {
     z-index: -1;
     transition: 0.2s;
   }
+}
 
-  &:hover {
-    &:after {
-      top: 0px;
-      left: 0px;
-    }
-  }
+// flex utils
+.fb-10 {
+  flex-basis: 10%;
+}
+.fb-20 {
+  flex-basis: 20%;
+}
+.fb-30 {
+  flex-basis: 30%;
+}
+.fb-40 {
+  flex-basis: 40%;
+}
+.fb-50 {
+  flex-basis: 50%;
+}
+.fb-60 {
+  flex-basis: 60%;
+}
+.fb-70 {
+  flex-basis: 70%;
+}
+.fb-80 {
+  flex-basis: 80%;
+}
+.fb-90 {
+  flex-basis: 90%;
 }
