--- a/src/assets/scss/partials/variables.scss
+++ b/src/assets/scss/partials/variables.scss
@@ -29,6 +29,7 @@ $black-50: #ffffff;
 $black-100: #e8e8e8;
 $black-200: #a7aebe;
 $black-300: #596fa6;
+$black-350: #7d8797;
 $black-400: #283b6c;
 $black-500: #091125;
 $black-600: #121b30;
